new `GlobalExecutor` class for async tasks; Refactor `AsyncUtils` with `GlobalExecutor`; improved the performance of ExtendedScrollPane; update javadocs